tests/errors/coarray_02.f90
program coarray_02
    call event_query(1, 1, 1)
    print *, "Hello, World!"
end program coarray_02